Snapshot working ChatGPT-style UI version
Save current runnable version before larger refactors.